[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Scene_Transition.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/winner_gui.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Player/Players.tscn" type="PackedScene" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )
WinGui = ExtResource( 4 )
Players = ExtResource( 6 )

[node name="Background" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Players_grp" type="Node2D" parent="."]

[node name="Transition" parent="." instance=ExtResource( 1 )]

[node name="TimerWin" type="Timer" parent="."]
wait_time = 5.0

[node name="TimerInitPlayer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="TimerWin" to="." method="_on_TimerWin_timeout"]
[connection signal="timeout" from="TimerInitPlayer" to="." method="_on_TimerInitPlayer_timeout"]
